The first type adapter is in progress

--- a/build.gradle
+++ b/build.gradle
@@ -1,8 +1,9 @@
 /*
+ * (#)build.gradle  0.2.0   09/28/2024
  * (#)build.gradle  0.1.0   09/28/2024
  *
  * @author   Jonathan Parker
- * @version  0.1.0
+ * @version  0.2.0
  * @since    0.1.0
  *
  * MIT License
@@ -81,10 +82,11 @@ dependencies {
     implementation      libs.net.jmp.util.logging.logging.utilities
     implementation      libs.org.slf4j.slf4j.api
     testImplementation  libs.junit.junit
+    testImplementation  libs.net.jmp.util.testing.testutil.testing.utilities
 }
 
 group = 'net.jmp.demo.gson'
-version = '0.1.0'
+version = '0.2.0'
 description = 'Gson-Demo'
 
 println "The groupId is ${project.group}"
