--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,9 @@
 #
+# (#)libs.versions.toml 0.2.0   09/28/2024
 # (#)libs.versions.toml 0.1.0   09/28/2024
 #
 #  @author   Jonathan Parker
-#  @version  0.1.0
+#  @version  0.2.0
 #  @since    0.1.0
 #
 #  MIT License
@@ -33,6 +34,7 @@ ch-qos-logback-logback-core = "1.5.8"
 com-google-code-gson-gson = "2.11.0"
 junit-junit = "4.13.2"
 net-jmp-util-logging-logging-utilities = "1.1.0"
+net-jmp-util-testing-testutil-testing-utilities = "1.0.0"
 org-slf4j-slf4j-api = "2.0.16"
 
 [libraries]
@@ -41,4 +43,5 @@ ch-qos-logback-logback-core = { module = "ch.qos.logback:logback-core", version.
 com-google-code-gson-gson = { module = "com.google.code.gson:gson", version.ref = "com-google-code-gson-gson" }
 junit-junit = { module = "junit:junit", version.ref = "junit-junit" }
 net-jmp-util-logging-logging-utilities = { module = "net.jmp.util.logging:logging-utilities", version.ref = "net-jmp-util-logging-logging-utilities" }
+net-jmp-util-testing-testutil-testing-utilities = { module = "net.jmp.util.testing.testutil:testing-utilities", version.ref = "net-jmp-util-testing-testutil-testing-utilities" }
 org-slf4j-slf4j-api = { module = "org.slf4j:slf4j-api", version.ref = "org-slf4j-slf4j-api" }
