--- a/build.gradle
+++ b/build.gradle
@@ -1,10 +1,11 @@
 /*
+ * (#)build.gradle  0.4.0   10/05/2024
  * (#)build.gradle  0.3.0   09/30/2024
  * (#)build.gradle  0.2.0   09/28/2024
  * (#)build.gradle  0.1.0   09/28/2024
  *
  * @author   Jonathan Parker
- * @version  0.3.0
+ * @version  0.4.0
  * @since    0.1.0
  *
  * MIT License
@@ -87,7 +88,7 @@ dependencies {
 }
 
 group = 'net.jmp.demo.gson'
-version = '0.3.0'
+version = '0.4.0'
 description = 'Gson-Demo'
 
 println "The groupId is ${project.group}"
