--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 /*
+ * (#)build.gradle  0.6.0   10/10/2024
  * (#)build.gradle  0.5.0   10/06/2024
  * (#)build.gradle  0.4.0   10/05/2024
  * (#)build.gradle  0.3.0   09/30/2024
@@ -6,7 +7,7 @@
  * (#)build.gradle  0.1.0   09/28/2024
  *
  * @author   Jonathan Parker
- * @version  0.5.0
+ * @version  0.6.0
  * @since    0.1.0
  *
  * MIT License
@@ -90,7 +91,7 @@ dependencies {
 }
 
 group = 'net.jmp.demo.gson'
-version = '0.5.0'
+version = '0.6.0'
 description = 'Gson-Demo'
 
 println "The groupId is ${project.group}"
