--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 /*
+ * (#)build.gradle  0.10.0  10/14/2024
  * (#)build.gradle  0.9.0   10/14/2024
  * (#)build.gradle  0.8.0   10/13/2024
  * (#)build.gradle  0.7.0   10/11/2024
@@ -10,7 +11,7 @@
  * (#)build.gradle  0.1.0   09/28/2024
  *
  * @author   Jonathan Parker
- * @version  0.9.0
+ * @version  0.10.0
  * @since    0.1.0
  *
  * MIT License
@@ -54,6 +55,7 @@ ext {
     execDescription = 'Run the main class with JavaExecTask'
     execGroup = 'Execution'
     javaMainClass = 'net.jmp.demo.gson.Bootstrap'
+    appConfigFile = '-Dapp.configurationFile=config/config.json'
     logConfigFile = '-Dlogback.configurationFile=config/logback.xml'
     macosArchitecture = System.getProperty('macosArchitecture')
     useAssertions = '-ea'
@@ -94,7 +96,7 @@ dependencies {
 }
 
 group = 'net.jmp.demo.gson'
-version = '0.9.0'
+version = '0.10.0'
 description = 'Gson-Demo'
 
 println "The groupId is ${project.group}"
@@ -147,7 +149,7 @@ tasks.withType(Javadoc).configureEach {
  */
 
 tasks.register('execute', JavaExec) {
-    allJvmArgs = [useAssertions, logConfigFile] as List<String>
+    allJvmArgs = [useAssertions, logConfigFile, appConfigFile] as List<String>
     classpath = sourceSets.main.runtimeClasspath
     description = execDescription
     group = execGroup
