--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,11 @@
 #
+# (#)libs.versions.toml 0.10.0  10/20/2024
 # (#)libs.versions.toml 0.5.0   10/06/2024
 # (#)libs.versions.toml 0.2.0   09/28/2024
 # (#)libs.versions.toml 0.1.0   09/28/2024
 #
 #  @author   Jonathan Parker
-#  @version  0.5.0
+#  @version  0.10.0
 #  @since    0.1.0
 #
 #  MIT License
@@ -34,7 +35,7 @@ ch-qos-logback-logback-classic = "1.5.8"
 ch-qos-logback-logback-core = "1.5.8"
 com-google-code-gson-gson = "2.11.0"
 junit-junit = "4.13.2"
-net-jmp-util-extra-extra-utilities = "1.3.1"
+net-jmp-util-extra-extra-utilities = "1.4.0"
 net-jmp-util-logging-logging-utilities = "1.1.0"
 net-jmp-util-testing-testutil-testing-utilities = "1.0.0"
 org-slf4j-slf4j-api = "2.0.16"
