--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,5 @@
 /*
+ * (#)build.gradle  0.11.0  10/20/2024
  * (#)build.gradle  0.10.0  10/14/2024
  * (#)build.gradle  0.9.0   10/14/2024
  * (#)build.gradle  0.8.0   10/13/2024
@@ -11,7 +12,7 @@
  * (#)build.gradle  0.1.0   09/28/2024
  *
  * @author   Jonathan Parker
- * @version  0.10.0
+ * @version  0.11.0
  * @since    0.1.0
  *
  * MIT License
@@ -96,7 +97,7 @@ dependencies {
 }
 
 group = 'net.jmp.demo.gson'
-version = '0.10.0'
+version = '0.11.0'
 description = 'Gson-Demo'
 
 println "The groupId is ${project.group}"
